--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-BE_URL_PRODUCTION="https://api.insanfotocopy.com/api"
+NEXT_PUBLIC_BE_URL_PRODUCTION="https://api.insanfotocopy.com/api"
 AUTH_SECRET="ueMMAvkxluF0ecSmP4eGXIwyJHR2xurIvaWzinhYfJo="
