--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-hook-form": "^7.54.0",
     "react-icons": "^5.4.0",
     "react-modal": "^3.16.1",
+    "react-select": "^5.9.0",
     "react-toastify": "^10.0.6",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
