--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.2",
+    "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
@@ -35,6 +36,7 @@
     "lucide-react": "^0.468.0",
     "next": "15.1.0",
     "next-auth": "5.0.0-beta.25",
+    "nuqs": "^2.2.3",
     "react": "^19",
     "react-day-picker": "8.10.1",
     "react-dom": "^19",
