update Dockerfile for Node.js 20, enhance environment variables, and improve date formatting in reports

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-NEXT_PUBLIC_BE_URL_PRODUCTION="https://api.insanfotocopy.com/api"
-AUTH_SECRET="ueMMAvkxluF0ecSmP4eGXIwyJHR2xurIvaWzinhYfJo="
+NEXT_PUBLIC_BE_URL_PRODUCTION=https://api.insanfotocopy.com/api
+AUTH_SECRET=ueMMAvkxluF0ecSmP4eGXIwyJHR2xurIvaWzinhYfJo=
+AUTH_TRUST_HOST=http://localhost:3000
+NEXTAUTH_URL=http://localhost:3000
