--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,5 +12,5 @@ services:
     environment:
       - NEXT_PUBLIC_BE_URL_PRODUCTION=https://api.insanfotocopy.com/api
       - AUTH_SECRET=ueMMAvkxluF0ecSmP4eGXIwyJHR2xurIvaWzinhYfJo=
-      - AUTH_TRUST_HOST=http://localhost:3002
-      - NEXTAUTH_URL=http://localhost:3002
+      - AUTH_TRUST_HOST=https://cms.insanfotocopy.com
+      - NEXTAUTH_URL=https://cms.insanfotocopy.com
