--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint",
     "format": "prettier --write --cache \"**/*.{ts,tsx,js,jsx,md,mdx,css,yaml,yml}\"",
     "check": "tsc --noEmit",
-    "prepare": "husky",
+    "prepare": "husky && husky install",
     "test": "tsc --noEmit && pnpm run lint"
   },
   "dependencies": {
@@ -63,7 +63,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jsdoc": "^50.6.1",
     "eslint-plugin-prettier": "^5.2.1",
-    "husky": "^9.1.7",
+    "husky": "^8.0.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.16",
     "typescript": "^5"
