--- a/package.json
+++ b/package.json
@@ -66,6 +66,6 @@
     "husky": "^8.0.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.16",
-    "typescript": "^5"
+    "typescript": "5.8"
   }
 }
